fix alignment of text in subgroups on sidebar

--- a/client/angular/components/sidebar/sidebar.scss
+++ b/client/angular/components/sidebar/sidebar.scss
@@ -28,6 +28,7 @@
   font-weight: 500;
 }
 .sidebar__list-item-button--subgroup {
+  display: flex;
   width: 100%;
   margin: 0;
   text-transform: none;
